// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit stage view test Should match snapshot when context is provided 1`] = `
<div>
  <div
    class="deployStage"
  >
    <div
      class="contentSection paddedSection"
    >
      <div
        class="tabHeading"
        id="stageOverview"
      >
        stageOverview
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="StyledProps--font StyledProps--main main nameIdDescriptionTags"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer TextInput--main"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <div
                        class="Text--withDocsTooltip"
                        data-tooltip-id="cdEditStage_identifier"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          Id
                        </p>
                      </div>
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        <span
                          class="Tooltip--acenter"
                          data-tooltip-id="cdEditStage_name"
                        >
                          stageNameLabel
                        </span>
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main bp3-label descriptionLabel"
                    >
                      optionalField
                      <span
                        class="bp3-icon StyledProps--main editOpen"
                        data-icon="Edit"
                        data-name="edit"
                        data-testid="description-edit"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main bp3-label descriptionLabel"
                    >
                      optionalField
                      <span
                        class="bp3-icon StyledProps--main editOpen"
                        data-icon="Edit"
                        data-name="edit"
                        data-testid="tags-edit"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                          <path
                            clip-rule="evenodd"
                            d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                            opacity="0.3"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="tabSubHeading"
                >
                  whatToDeploy
                </div>
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
                  data-id="serviceType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <label
                        class="Thumbnail--squareCardContainer"
                      >
                        <div
                          class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                        >
                          <span
                            class="Card--corner"
                          >
                            <span
                              class="Card--badge"
                            />
                            <span
                              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                              data-icon="main-tick"
                            >
                              <svg
                                height="10"
                                viewBox="0 0 11 8"
                                width="10"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="service"
                          >
                            <svg
                              height="26"
                              viewBox="0 0 16 14"
                              width="26"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8.04 4.695a2.345 2.345 0 100 4.69 2.345 2.345 0 000-4.69zm0 .67a1.675 1.675 0 110 3.35 1.675 1.675 0 010-3.35zM10.398.731H5.64c-.819 0-1.578.427-2.003 1.126L1.052 6.104a2.345 2.345 0 00.055 2.525l2.529 3.774a2.345 2.345 0 001.948 1.04h4.87c.772 0 1.493-.38 1.931-1.014l2.604-3.776c.531-.77.554-1.783.056-2.576l-2.66-4.246a2.345 2.345 0 00-1.987-1.1zm-4.757.67h4.757c.577 0 1.113.297 1.419.786l2.66 4.246c.356.566.34 1.29-.04 1.84l-2.603 3.775a1.675 1.675 0 01-1.38.724h-4.87c-.559 0-1.08-.278-1.392-.742L1.663 8.256a1.675 1.675 0 01-.039-1.804L4.21 2.205c.304-.5.846-.804 1.43-.804h.001z"
                                fill="#25A6F7"
                              />
                            </svg>
                          </span>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                        >
                          service
                        </p>
                        <input
                          checked=""
                          name="serviceType"
                          type="checkbox"
                          value="service"
                        />
                      </label>
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                        data-testid="thumbnail-select-change"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="Edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          Change
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="Accordion--accordion accordion"
      >
        <div
          class="Accordion--panel"
          data-open="false"
          data-testid="advanced-panel"
          id="advanced-panel"
        >
          <div
            class="Accordion--summary"
            data-testid="advanced-summary"
          >
            <div
              class=""
            >
              <div
                class="tabHeading"
              >
                common.advanced
              </div>
            </div>
            <div
              class="Accordion--chevron"
            />
          </div>
          <div
            class="bp3-collapse Accordion--collapse"
          >
            <div
              aria-hidden="false"
              class="bp3-collapse-body"
              style="transform: translateY(-undefinedpx);"
            />
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--margin-top-xxlarge"
      />
    </div>
  </div>
</div>
`;

exports[`Edit stage view test Should match snapshot when template is provided 1`] = `
<div>
  <div
    class="deployStage"
  >
    <div
      class="contentSection"
    >
      <p
        class="StyledProps--font StyledProps--main addStageHeading"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall"
          data-icon="cd-main"
        >
          <svg
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
              fill="url(#cd-main_svg__a)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cd-main_svg__a"
                x1="6.774"
                x2="21.5"
                y1="2"
                y2="30"
              >
                <stop
                  stop-color="#62F91F"
                />
                <stop
                  offset="1"
                  stop-color="#45BD35"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        pipelineSteps.build.create.aboutYourStage
      </p>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="cdEditStage_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="Edit"
                    style="vertical-align: middle; cursor: pointer;"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="cdEditStage_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-top-medium StyledProps--margin-bottom-medium StyledProps--font-size-small StyledProps--color StyledProps--color-black"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--margin-right-xsmall"
                  data-icon="template-library"
                >
                  <svg
                    height="12"
                    viewBox="0 0 12 13"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                        id="template-library_svg__a"
                      />
                    </defs>
                    <clippath
                      id="template-library_svg__b"
                    >
                      <use
                        overflow="visible"
                        xlink:href="#template-library_svg__a"
                      />
                    </clippath>
                    <path
                      clip-path="url(#template-library_svg__b)"
                      d="M-5-5h22v23H-5z"
                      fill="#25a6f7"
                    />
                  </svg>
                </span>
                Using Template: name (Stable)
              </p>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  pipelineSteps.build.create.setupStage
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
